added footer and menu to the app, simply by adding their selectors in the app.component.html and added bootstrap decoration with routerLink routng

--- a/project/frontend/todo/src/app/app.component.html
+++ b/project/frontend/todo/src/app/app.component.html
@@ -1,4 +1,8 @@
 <!-- <app-login></app-login> -->
-
-<router-outlet></router-outlet>
+<app-menu></app-menu>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
+<app-footer></app-footer>
 <!--The router will help us -->
+<!--Note: Adding menu and footer using their selectors as definde in their .ts files-->
