--- a/project/frontend/todo/src/app/welcome/welcome.component.html
+++ b/project/frontend/todo/src/app/welcome/welcome.component.html
@@ -1,4 +1,6 @@
-<div>Welcome to our website {{ name }}!</div>
+<h1>Welcome</h1>
+
+<div class="container">Welcome to our website {{ name }}!</div>
 
 <br />
 See your todo's <a routerLink="/todos">here</a>
