--- a/project/frontend/todo/src/app/list-todos/list-todos.component.html
+++ b/project/frontend/todo/src/app/list-todos/list-todos.component.html
@@ -1,25 +1,23 @@
-<h1>TODO Page</h1>
-
-<table border="1">
-  <caption>
-    My Todo's
-  </caption>
-  <thead>
-    <tr>
-      <th>Description</th>
-      <th>Target Date</th>
-      <th>Is Completed</th>
-    </tr>
-  </thead>
-  <tbody>
-    <!-- in java would be for (todo : Todos) {}-->
-    <tr *ngFor="let todo of todos">
-      <td>{{ todo.description }}</td>
-      <td>{{ todo.targetDate | date }}</td>
-      <!--Adding the "|" pipe makes the date in a normal format instead of computer format-->
-      <!--We can also add the following pipes: | uppercase, | lowercase, et-->
-      <td>{{ todo.done }}</td>
-      <!--todo is the for loop variable-->
-    </tr>
-  </tbody>
-</table>
+<h1>My Todos</h1>
+<div class="container">
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Description</th>
+        <th>Target Date</th>
+        <th>Is Completed</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- in java would be for (todo : Todos) {}-->
+      <tr *ngFor="let todo of todos">
+        <td>{{ todo.description }}</td>
+        <td>{{ todo.targetDate | date }}</td>
+        <!--Adding the "|" pipe makes the date in a normal format instead of computer format-->
+        <!--We can also add the following pipes: | uppercase, | lowercase, et-->
+        <td>{{ todo.done }}</td>
+        <!--todo is the for loop variable-->
+      </tr>
+    </tbody>
+  </table>
+</div>
