--- a/project/frontend/todo/src/app/login/login.component.html
+++ b/project/frontend/todo/src/app/login/login.component.html
@@ -1,20 +1,26 @@
-<small *ngIf="invalidLogin == true"> {{ errorMessage }}</small>
-<!--The == true is innecessary, since it takes a boolean value-->
-<div>
-  User Name: <input type="text" name="username" [(ngModel)]="username" />
-  <!-- ngModel is an angular feature that binds the value of this input named username to the model -->
-  <!-- ngModel is double way data binding: when the data changes in the component.ts it changes on the page, and when it changes on the page it goes back to here-->
+<h1>Login!</h1>
 
-  Password:
-  <input type="password" name="password" [(ngModel)]="password" />
-  <!--We did data binding by using the variables username and password defined in the component.ts file-->
-  <!-- Now let's do the banana in a box model for password-->
+<div class="container">
+  <div class="alert alert-warning" *ngIf="invalidLogin == true">
+    {{ errorMessage }}
+  </div>
+  <!--The == true is innecessary, since it takes a boolean value-->
+  <div>
+    User Name: <input type="text" name="username" [(ngModel)]="username" />
+    <!-- ngModel is an angular feature that binds the value of this input named username to the model -->
+    <!-- ngModel is double way data binding: when the data changes in the component.ts it changes on the page, and when it changes on the page it goes back to here-->
 
-  <!-- Username: {{ username }} -->
+    Password:
+    <input type="password" name="password" [(ngModel)]="password" />
+    <!--We did data binding by using the variables username and password defined in the component.ts file-->
+    <!-- Now let's do the banana in a box model for password-->
 
-  <!-- Now we are going to use event binding -->
-  <button (click)="handleLogin()">Login</button>
-  <!-- All the methods are defined in the login.component.ts -->
-  <!--This method is just printing the username and the password in the console-->
-  <!-- event binding allows us to bind an event (click) to a component event method-->
+    <!-- Username: {{ username }} -->
+
+    <!-- Now we are going to use event binding -->
+    <button class="btn btn-success" (click)="handleLogin()">Login</button>
+    <!-- All the methods are defined in the login.component.ts -->
+    <!--This method is just printing the username and the password in the console-->
+    <!-- event binding allows us to bind an event (click) to a component event method-->
+  </div>
 </div>
