We are now listening to the http request and can see the response in the inspect > Network tab, and now we can see that the message is being displayed in there. Wow! I also learned that by doin .subscribe() when calling the httprequest, it calls the request 1, 2 or more times depending on how many times you request it

--- a/project/frontend/todo/src/app/welcome/welcome.component.html
+++ b/project/frontend/todo/src/app/welcome/welcome.component.html
@@ -1,6 +1,11 @@
 <h1>Welcome</h1>
 
 <div class="container">Welcome to our website {{ name }}!</div>
-
+<div class="container">
+  Click here to get a customized welcom message
+  <button (click)="getWelcomeMessage()" class="btn btn-success">
+    Get Welcome Message
+  </button>
+</div>
 <br />
 See your todo's <a routerLink="/todos">here</a>
