--- a/project/frontend/todo/src/app/welcome/welcome.component.html
+++ b/project/frontend/todo/src/app/welcome/welcome.component.html
@@ -5,7 +5,7 @@
 <div class="container">Welcome to our website {{ name }}!</div>
 <div class="container">
   Click here to get a customized welcom message
-  <button (click)="getWelcomeMessage()" class="btn btn-success">
+  <button (click)="getWelcomeMessageWithParameter()" class="btn btn-success">
     Get Welcome Message
   </button>
 </div>
