--- a/project/frontend/todo/src/app/welcome/welcome.component.html
+++ b/project/frontend/todo/src/app/welcome/welcome.component.html
@@ -4,7 +4,7 @@
 </div>
 <div class="container">Welcome to our website {{ name }}!</div>
 <div class="container">
-  Click here to get a customized welcom message
+  Click here to get a customized welcome message
   <button (click)="getWelcomeMessageWithParameter()" class="btn btn-success">
     Get Welcome Message
   </button>
