--- a/project/frontend/todo/src/app/list-todos/list-todos.component.html
+++ b/project/frontend/todo/src/app/list-todos/list-todos.component.html
@@ -1,4 +1,7 @@
 <h1>My Todos</h1>
+<div class="alert alert-success" *ngIf="message">
+  {{ message }}
+</div>
 <div class="container">
   <table class="table">
     <thead>
@@ -6,6 +9,7 @@
         <th>Description</th>
         <th>Target Date</th>
         <th>Is Completed</th>
+        <th>Actions</th>
       </tr>
     </thead>
     <tbody>
@@ -17,6 +21,11 @@
         <!--We can also add the following pipes: | uppercase, | lowercase, et-->
         <td>{{ todo.done }}</td>
         <!--todo is the for loop variable-->
+        <td>
+          <button (click)="deleteTodo(todo.id)" class="btn btn-danger">
+            Delete
+          </button>
+        </td>
       </tr>
     </tbody>
   </table>
