added the TodoComponent component by doing ng generate component todo, which is going to be the page to update a todo, and we added a router.navigate when the updateTodo(id) method is called from clicking the Update button, so that we can update that todo there! Fun

--- a/project/frontend/todo/src/app/list-todos/list-todos.component.html
+++ b/project/frontend/todo/src/app/list-todos/list-todos.component.html
@@ -9,7 +9,8 @@
         <th>Description</th>
         <th>Target Date</th>
         <th>Is Completed</th>
-        <th>Actions</th>
+        <th>Update</th>
+        <th>Delete</th>
       </tr>
     </thead>
     <tbody>
@@ -21,6 +22,12 @@
         <!--We can also add the following pipes: | uppercase, | lowercase, et-->
         <td>{{ todo.done }}</td>
         <!--todo is the for loop variable-->
+        <td>
+          <button (click)="updateTodo(todo.id)" class="btn btn-success">
+            Update
+          </button>
+        </td>
+
         <td>
           <button (click)="deleteTodo(todo.id)" class="btn btn-danger">
             Delete
