--- a/project/frontend/todo/src/app/todo/todo.component.html
+++ b/project/frontend/todo/src/app/todo/todo.component.html
@@ -1,1 +1,25 @@
-<p>todo works!</p>
+<h2>Todo</h2>
+
+<div container>
+  <fieldset class="form-group">
+    <label>Description</label>
+    <input
+      class="form-control"
+      type="text"
+      name="description"
+      required="required"
+    />
+  </fieldset>
+
+  <fieldset class="form-group">
+    <label>Target date</label>
+    <input
+      class="form-control"
+      type="date"
+      name="targeted"
+      required="required"
+    />
+  </fieldset>
+
+  <button class="btn btn-success" (click)="saveTodo()">Save</button>
+</div>
