added the banana in a box model so that when we retrieve a todo using the retrieveTodo method from the todoDataService, we can save that object in a Todo instance variable in the TodoComponent. Now that we have the todo instance there, we can autocomplete the forms in the update todo page, but the date is in different format o we need to fix that. Let's continue! Remember that we still need to eliminate the hardcoded user that we are always doing

--- a/project/frontend/todo/src/app/todo/todo.component.html
+++ b/project/frontend/todo/src/app/todo/todo.component.html
@@ -8,6 +8,7 @@
       type="text"
       name="description"
       required="required"
+      [(ngModel)]="todo.description"
     />
   </fieldset>
 
@@ -18,6 +19,7 @@
       type="date"
       name="targeted"
       required="required"
+      [(ngModel)]="todo.targetDate"
     />
   </fieldset>
 
