--- a/project/frontend/todo/src/app/todo/todo.component.html
+++ b/project/frontend/todo/src/app/todo/todo.component.html
@@ -19,7 +19,8 @@
       type="date"
       name="targeted"
       required="required"
-      [(ngModel)]="todo.targetDate"
+      [ngModel]="todo.targetDate | date: 'yyy-MM-dd'"
+      (ngModelChange)="todo.targetDate = $event"
     />
   </fieldset>
 
