created a method called createTodo which takes the username and the todo to create, this calls the POST request for the web service, and then, this method is called from the save button. There was an issue in the beginning because onInit of the todo page, it was requesting a todo to autocomplete it, but since there is no todo here, there was no need to request it, so, we just added an if condition if the id is -1, then we just do not need to request it. We added the same condition for saving it, if the ID was -1, then we do not need to update todo but to create todo, and that's it. The new todo button takes us to the todo page eith the id of -1, so it's all working fine

--- a/project/frontend/todo/src/app/list-todos/list-todos.component.html
+++ b/project/frontend/todo/src/app/list-todos/list-todos.component.html
@@ -36,4 +36,7 @@
       </tr>
     </tbody>
   </table>
+  <div class="row">
+    <button class="btn btn-success" (click)="addTodo()">New todo</button>
+  </div>
 </div>
