--- a/project/frontend/todo/src/app/todo/todo.component.html
+++ b/project/frontend/todo/src/app/todo/todo.component.html
@@ -1,28 +1,30 @@
 <h2>Todo</h2>
 
 <div container>
-  <fieldset class="form-group">
-    <label>Description</label>
-    <input
-      class="form-control"
-      type="text"
-      name="description"
-      required="required"
-      [(ngModel)]="todo.description"
-    />
-  </fieldset>
+  <form (ngSubmit)="saveTodo()">
+    <fieldset class="form-group">
+      <label>Description</label>
+      <input
+        class="form-control"
+        type="text"
+        name="description"
+        required="required"
+        [(ngModel)]="todo.description"
+      />
+    </fieldset>
 
-  <fieldset class="form-group">
-    <label>Target date</label>
-    <input
-      class="form-control"
-      type="date"
-      name="targeted"
-      required="required"
-      [ngModel]="todo.targetDate | date: 'yyy-MM-dd'"
-      (ngModelChange)="todo.targetDate = $event"
-    />
-  </fieldset>
+    <fieldset class="form-group">
+      <label>Target date</label>
+      <input
+        class="form-control"
+        type="date"
+        name="targeted"
+        required="required"
+        [ngModel]="todo.targetDate | date: 'yyy-MM-dd'"
+        (ngModelChange)="todo.targetDate = $event"
+      />
+    </fieldset>
 
-  <button class="btn btn-success" (click)="saveTodo()">Save</button>
+    <button type="submit" class="btn btn-success">Save</button>
+  </form>
 </div>
