--- a/project/frontend/todo/src/app/todo/todo.component.html
+++ b/project/frontend/todo/src/app/todo/todo.component.html
@@ -1,7 +1,7 @@
 <h2>Todo</h2>
 
 <div container>
-  <form (ngSubmit)="saveTodo()">
+  <form (ngSubmit)="!todoForm.invalid && saveTodo()" #todoForm="ngForm">
     <fieldset class="form-group">
       <label>Description</label>
       <input
