we did some kind of magic with the css and html, so that we remark in red left margin the fields that are invalid (blank). Then, we aded a lot of target #variables so that we are tracking them using ngModel, and finally, added warnings that show only if the todoForm.dirty (has been modified), and targetDate.invalid or description.invalid

--- a/project/frontend/todo/src/app/todo/todo.component.html
+++ b/project/frontend/todo/src/app/todo/todo.component.html
@@ -1,6 +1,15 @@
 <h2>Todo</h2>
 
 <div container>
+  <div class="alert alert-warning" *ngIf="todoForm.dirty && targetDate.invalid">
+    Enter valid date please
+  </div>
+  <div
+    class="alert alert-warning"
+    *ngIf="todoForm.dirty && description.invalid"
+  >
+    Enter valid description please
+  </div>
   <form (ngSubmit)="!todoForm.invalid && saveTodo()" #todoForm="ngForm">
     <fieldset class="form-group">
       <label>Description</label>
@@ -9,7 +18,9 @@
         type="text"
         name="description"
         required="required"
+        minlength="5"
         [(ngModel)]="todo.description"
+        #description="ngModel"
       />
     </fieldset>
 
@@ -22,6 +33,7 @@
         required="required"
         [ngModel]="todo.targetDate | date: 'yyy-MM-dd'"
         (ngModelChange)="todo.targetDate = $event"
+        #targetDate="ngModel"
       />
     </fieldset>
 
