Validation for credentails is orking now! We just had to change the handleLogin for the handleBasicAuthenticationLogin one, and we also commented out the providers array in the app-module.ts

--- a/project/frontend/todo/src/app/login/login.component.html
+++ b/project/frontend/todo/src/app/login/login.component.html
@@ -18,7 +18,9 @@
     <!-- Username: {{ username }} -->
 
     <!-- Now we are going to use event binding -->
-    <button class="btn btn-success" (click)="handleLogin()">Login</button>
+    <button class="btn btn-success" (click)="handleBasicAuthenticationLogin()">
+      Login
+    </button>
     <!-- All the methods are defined in the login.component.ts -->
     <!--This method is just printing the username and the password in the console-->
     <!-- event binding allows us to bind an event (click) to a component event method-->
